--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,90 +1,46 @@
-<<<<<<< HEAD
 eclipse.preferences.version=1
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1760838966/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1760838966/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1760838966/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/ba-elf-ba2/ba-elf/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1760838966/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1760838966/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/ba-elf-ba2/ba-elf/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.2061733596/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.2061733596/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.2061733596/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/ba-elf-ba2/ba-elf/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.2061733596/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.2061733596/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.1897444275/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.1897444275/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.1897444275/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/ba-elf-ba2/ba-elf/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.1897444275/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.1897444275/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.99095124/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.99095124/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.99095124/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/ba-elf-ba2/ba-elf/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.99095124/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.99095124/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/ba-elf-ba2/ba-elf/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.941300685/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.941300685/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.941300685/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/ba-elf-ba2/ba-elf/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.941300685/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.941300685/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/ba-elf-ba2/ba-elf/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/appendContributed=true
-=======
-eclipse.preferences.version=1
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1192827784/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1192827784/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1192827784/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin;${workspace_loc}/../Tools/cygwin/bin;${workspace_loc}/../bin
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1192827784/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1192827784/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1760838966/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1760838966/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1760838966/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin;${workspace_loc}/../Tools/cygwin/bin;${workspace_loc}/../bin
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1760838966/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428.1760838966/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin;${workspace_loc}/../Tools/cygwin/bin;${workspace_loc}/../bin
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.147779785.37820112.1086289428/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.2061733596/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.2061733596/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.2061733596/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin;${workspace_loc}/../Tools/cygwin/bin;${workspace_loc}/../bin
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.2061733596/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.2061733596/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.1897444275/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.1897444275/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.1897444275/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/ba-elf-ba2/ba-elf/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.1897444275/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.1897444275/appendContributed=false
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.99095124/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.99095124/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.99095124/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin;${workspace_loc}/../Tools/cygwin/bin;${workspace_loc}/../bin
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.99095124/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382.99095124/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/ba-elf-ba2/ba-elf/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.822059382/appendContributed=false
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.941300685/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.941300685/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.941300685/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin;${workspace_loc}/../Tools/cygwin/bin;${workspace_loc}/../bin
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.941300685/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.941300685/appendContributed=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/PATH/delimiter=;
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin;${workspace_loc}/../Tools/cygwin/bin;${workspace_loc}/../bin
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/appendContributed=true
->>>>>>> refs/remotes/origin/work001
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482.1759077581/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482.1759077581/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482.1759077581/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482.1759077581/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482.1759077581/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1830880958/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1830880958/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1830880958/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1830880958/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1830880958/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.1804236715/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.1804236715/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.1804236715/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.1804236715/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.1804236715/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635/appendContributed=false
