--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,4 +1,9 @@
 eclipse.preferences.version=1
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1173757099/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1173757099/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1173757099/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1173757099/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1173757099/appendContributed=false
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482.1759077581/PATH/delimiter=;
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482.1759077581/PATH/operation=replace
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482.1759077581/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
@@ -24,6 +29,11 @@ environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.8106
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.362686652/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.362686652/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.362686652/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.362686652/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.362686652/appendContributed=false
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853/PATH/delimiter=;
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853/PATH/operation=replace
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
