--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -39,6 +39,11 @@ environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.8106
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.1295666742/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.1295666742/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.1295666742/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.1295666742/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.1295666742/appendContributed=false
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.362686652/PATH/delimiter=;
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.362686652/PATH/operation=replace
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.362686652/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
