--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -4,6 +4,9 @@ environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1173
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1173757099/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1173757099/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1173757099/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1174849888/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1174849888/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1174849888/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1174849888/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1174849888/appendContributed=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482.1759077581/PATH/delimiter=;
@@ -13,6 +16,9 @@ environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482.1759077581/appendContributed=false
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482.235647663/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482.235647663/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1692123482/appendContributed=false
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.1830880958/PATH/delimiter=;
@@ -24,8 +30,14 @@ environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.2458
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.245864472/appendContributed=false
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.71596915.1578516660.31528568/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.71596915.1578516660.31528568/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.71596915.1578516660/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.71596915.1578516660/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.71596915.1578516660/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.71596915.1578516660/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.71596915.1578516660/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.71596915/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.71596915/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.71596915/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.71596915/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.71596915/appendContributed=false
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.1804236715/PATH/delimiter=;
@@ -37,6 +49,9 @@ environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.8106
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1105972366/appendContributed=false
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935.1613762382/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935.1613762382/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.1749584935/appendContributed=false
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853.1295666742/PATH/delimiter=;
@@ -54,11 +69,20 @@ environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.8106
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702.427278853/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.299523702/appendContributed=false
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.379597581/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634.379597581/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635.810649634/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635/append=true
 environment/project/cdt.managedbuild.config.gnu.cross.exe.release.802548635/appendContributed=false
